Release 0.3.3 — fix SqlCommand rejecting null bind parameters
SqlCommand.of/named/the canonical constructor built their parameter list with
List.of/List.copyOf, both of which throw NullPointerException on any null
element. PreparedStatement.setObject(i, null) binds SQL NULL correctly, so
nothing downstream needed this restriction — it silently made every nullable
column unusable through a Describer-driven store(), with no compile-time
signal.

No existing describer in this repo (Order, Note, Memo, Person) happened to
have a nullable column, so nothing here exercised the bug; it surfaced when
soba (the first external consumer with real nullable domain fields — an
agreement's open-ended validTo, a product's optional eolDate/parentId) tried
to store one and got an NPE instead of a NULL.

Fix: build the parameter list with Arrays.asList (wrapped unmodifiable in the
compact constructor) instead of List.of/List.copyOf. Behavior for non-null
parameter lists is unchanged; a null element is now bound as SQL NULL as
PreparedStatement already supports.

New test: SqlCommandTest (unit coverage for null elements in all three
construction paths, plus an H2 integration test writing and reading back an
actual NULL through a Describer-driven JdbcRepository).

No public API shape change — same method signatures, only the null
restriction is lifted. Non-breaking.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01RQ8MCZGiXaiLNKgXxwbLsg